# LiverTumorClassification

./: .gitignore  README.md  SETUP.md  liver_segmentation.ipynb  pyproject.toml  segmentation_classification.ipynb
configs/: phase1_server_audit.yaml
docs/: REMOTE_WORKFLOW.md
runs/p01-r01-environment-smoke-20260622-152916-074a3a2/: artifact_manifest.json  command.txt  config.resolved.yaml  environment.json  git_info.json  status.json
runs/p01-r01-environment-smoke-20260622-153022-074a3a2/: artifact_manifest.json  environment.json  status.json
runs/p01-r01-environment-smoke-20260622-153459-466836-p84785-074a3a2/: artifact_manifest.json  environment.json  status.json
runs/p01-r01-local-sample-smoke-20260622-153034-074a3a2/: artifact_manifest.json  environment.json  git_info.json  status.json
runs/p01-r01-local-sample-smoke-20260622-153513-112280-p84872-074a3a2/: artifact_manifest.json  command.txt  environment.json  git_diff.patch  status.json
runs/p01-r01-local-sample-smoke-20260622-154116-160844-p86465-074a3a2/: artifact_manifest.json  environment.json  status.json
runs/p01-r03-dataset-download-20260622-153548-917465-p85154-074a3a2/: artifact_manifest.json  command.txt  config.resolved.yaml  environment.json  git_info.json  status.json
runs/p01-r03-dataset-download-20260622-153945-530141-p86060-074a3a2/: artifact_manifest.json  config.resolved.yaml  environment.json  seeds.json  status.json
scripts/: server_phase1_smoke.sh
src/liver_tumor/: data.py  experiment.py
tests/: test_config.py  test_data.py  test_download.py  test_experiment.py
(+33 files in other folders)
