[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liver-tumor-segmentation"
version = "0.1.0"
description = "Reproducible multi-phase CT liver tumor segmentation experiments"
requires-python = ">=3.10,<3.13"
dependencies = [
  "matplotlib>=3.8,<4",
  "nibabel>=5.2,<6",
  "numpy>=1.26,<2.1",
  "pandas>=2.1,<3",
  "Pillow>=10,<12",
  "psutil>=5.9,<7",
  "PyYAML>=6,<7",
  "requests>=2.31,<3",
  "scikit-image>=0.22,<1",
  "scikit-learn>=1.4,<2",
  "scipy>=1.12,<2",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb"]
